--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,18 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1138\cocoasubrtf470
-{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural
+*.csproj
+*.pidb
+*.sln
+*.userprefs
 
-\f0\fs24 \cf0 *.csproj\
-*.pidb\
-*.sln\
-*.userprefs\
-\
-Library/*\
-Temp/\
-.DS_Store\
-\
-!EditorBuildSettings.asset\
-!InputManager.asset\
-!ProjectSettings.asset\
-!QualitySettings.asset\
-!TagManager.asset\
-!TimeManager.asset\
-!AudioManager.asset\
-!DynamicsManager.asset\
-!NetworkManager.asset}
+Library/*
+Temp/
+.DS_Store
+
+!EditorBuildSettings.asset
+!InputManager.asset
+!ProjectSettings.asset
+!QualitySettings.asset
+!TagManager.asset
+!TimeManager.asset
+!AudioManager.asset
+!DynamicsManager.asset
+!NetworkManager.asset
